<dev> clickhouse reader

--- a/package.xml
+++ b/package.xml
@@ -32,6 +32,15 @@
             </includes>
             <outputDirectory>datax</outputDirectory>
         </fileSet>
+
+        <fileSet>
+            <directory>clickhousereader/target/datax/</directory>
+            <includes>
+                <include>**/*.*</include>
+            </includes>
+            <outputDirectory>datax</outputDirectory>
+        </fileSet>
+
         <fileSet>
             <directory>oceanbasev10reader/target/datax/</directory>
             <includes>
