--- a/pom.xml
+++ b/pom.xml
@@ -48,18 +48,19 @@
 
         <!-- reader -->
         <module>mysqlreader</module>
-        <module>drdsreader</module>
+        <module>clickhousereader</module>
+<!--        <module>drdsreader</module>-->
         <module>sqlserverreader</module>
         <module>postgresqlreader</module>
-        <module>kingbaseesreader</module>
+<!--        <module>kingbaseesreader</module>-->
         <module>oraclereader</module>
-        <module>odpsreader</module>
-        <module>otsreader</module>
-        <module>otsstreamreader</module>
+<!--        <module>odpsreader</module>-->
+<!--        <module>otsreader</module>-->
+<!--        <module>otsstreamreader</module>-->
         <module>txtfilereader</module>
-        <module>hdfsreader</module>
+<!--        <module>hdfsreader</module>-->
         <module>streamreader</module>
-        <module>ossreader</module>
+<!--        <module>ossreader</module>-->
         <module>ftpreader</module>
         <module>mongodbreader</module>
         <module>rdbmsreader</module>
@@ -68,26 +69,26 @@
         <module>tsdbreader</module>
         <module>opentsdbreader</module>
         <module>cassandrareader</module>
-        <module>gdbreader</module>
-        <module>oceanbasev10reader</module>
+<!--        <module>gdbreader</module>-->
+<!--        <module>oceanbasev10reader</module>-->
 
         <!-- writer -->
         <module>mysqlwriter</module>
         <module>drdswriter</module>
-        <module>odpswriter</module>
+<!--        <module>odpswriter</module>-->
         <module>txtfilewriter</module>
         <module>ftpwriter</module>
-        <module>hdfswriter</module>
+<!--        <module>hdfswriter</module>-->
         <module>streamwriter</module>
-        <module>otswriter</module>
+<!--        <module>otswriter</module>-->
         <module>oraclewriter</module>
         <module>sqlserverwriter</module>
         <module>postgresqlwriter</module>
-        <module>kingbaseeswriter</module>
-        <module>osswriter</module>
+<!--        <module>kingbaseeswriter</module>-->
+<!--        <module>osswriter</module>-->
         <module>mongodbwriter</module>
-        <module>adswriter</module>
-        <module>ocswriter</module>
+<!--        <module>adswriter</module>-->
+<!--        <module>ocswriter</module>-->
         <module>rdbmswriter</module>
         <module>hbase11xwriter</module>
         <module>hbase094xwriter</module>
@@ -95,12 +96,12 @@
         <module>hbase11xsqlreader</module>
         <module>elasticsearchwriter</module>
         <module>tsdbwriter</module>
-        <module>adbpgwriter</module>
-        <module>gdbwriter</module>
+<!--        <module>adbpgwriter</module>-->
+<!--        <module>gdbwriter</module>-->
         <module>cassandrawriter</module>
         <module>clickhousewriter</module>
-        <module>oscarwriter</module>
-        <module>oceanbasev10writer</module>
+<!--        <module>oscarwriter</module>-->
+<!--        <module>oceanbasev10writer</module>-->
         <!-- common support module -->
         <module>plugin-rdbms-util</module>
         <module>plugin-unstructured-storage-util</module>
