<dev>  add zork releases distributionManagement address

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,20 @@
         <mysql.driver.version>5.1.47</mysql.driver.version>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>releases</id>
+            <name>Internal Releases</name>
+            <url>http://nexus.zorkdata.com/repository/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>Internal Snapshots</name>
+            <url>http://nexus.zorkdata.com/repository/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+
+
     <modules>
         <module>common</module>
         <module>core</module>
