--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
         <module>tsdbreader</module>
         <module>opentsdbreader</module>
         <module>cassandrareader</module>
+        <module>elasticsearchreader</module>
 <!--        <module>gdbreader</module>-->
 <!--        <module>oceanbasev10reader</module>-->
 
