1.修改inlfuxdbwriter插件打包

--- a/package.xml
+++ b/package.xml
@@ -425,5 +425,13 @@
             <fileMode>0644</fileMode>
             <outputDirectory>datax</outputDirectory>
         </fileSet>
+        <fileSet>
+            <directory>kafkawriter/target/datax/</directory>
+            <includes>
+                <include>**/*.*</include>
+            </includes>
+            <fileMode>0644</fileMode>
+            <outputDirectory>datax</outputDirectory>
+        </fileSet>
     </fileSets>
 </assembly>
